# llm-style

./: .gitignore  README.md  analysis.ipynb  classification.ipynb  classification_results.csv  data.csv  data.ipynb  ensemble_classification_results.csv  final_analysis.ipynb  gemini_style_vectors.csv  gpt_data_collection.ipynb  pyproject.toml  quad_true_pred.csv  reddit_prompts.csv
classification_results/: pairwise.csv
collate_data/: add_reddit.py  bert.py  convert_ben_data.py  create_single_dataset.ipynb  gemini.csv  gemini.ipynb  gemini0.csv  gemini1.csv  gemini_nltk.csv  gemini_style_vectors.csv  llama.py  opt.py  prompts  rename_column.py  roberta.py  style_vectors.ipynb  style_vectors_from_raw.ipynb  swap_columns.py  tokenize_nltk.py
data/: analysis.ipynb  data.ipynb  reddit_prompts.csv
hewlett/: prompts.csv
hewlett_responses/: claude-3-opus-20240229.csv  claude-3-sonnet-20240229.csv  gemini-1.0-pro.csv  gemini-1.5-pro-latest.csv  gpt-3.5-turbo-0125_0.0.csv  gpt-3.5-turbo-0125_0.3.csv  gpt-3.5-turbo-0125_0.5.csv  gpt-3.5-turbo-0125_0.7.csv  gpt-3.5-turbo-0125_0.8.csv  gpt-3.5-turbo-0125_1.1.csv  gpt-3.5-turbo-0125_1.2.csv  gpt-4-turbo-2024-04-09.csv
reddit/: README
reddit_responses/: claude-3-sonnet-20240229.csv  gemini-1.0-pro.csv  gpt-3.5-turbo-0125_0.0.csv  gpt-3.5-turbo-0125_0.2.csv  gpt-3.5-turbo-0125_0.3.csv  gpt-3.5-turbo-0125_0.4.csv  gpt-3.5-turbo-0125_0.6.csv  gpt-3.5-turbo-0125_1.2.csv  gpt-4-turbo-2024-04-09.csv  human.csv
results/: binary_classification_llms_together.csv  classification_15_temps.csv  cross_classification_train=hewlett.csv  (+3 more)
(+37 files in other folders)
