[tool.poetry]
name = "llm-style"
version = "0.1.0"
description = ""
authors = ["Harrison Stropkay <harrison.f.stropkay.25@dartmouth.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
scipy = "^1.14.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.2"
tqdm = "^4.66.4"
nltk = "^3.8.1"
numpy = "^2.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
